--- a/index.html
+++ b/index.html
@@ -119,25 +119,25 @@
     <section id="section1" class="view-main--1 rounded-3xl">
       <div class="section1--wrapper">
         <div class="showreelContainer rounded-2xl text-white video-container">
-          <video class="cod--reel z-10 lazy-video" loop muted
-            src="./assets/identities/main471280trailer3297r.mp4"></video>
+          <video class="cod--reel z-10 lazy-video" loop muted src="./assets/identities/main471280trailer3297r.mp4" poster="./assets/img/poster-videoBO6_LP-meta_image.jpg"></video>
           <span class="reelTip absolute z-20 bottom-0 p-4 font-[Hit-Cond] text-md mix-blend-difference">CALL OF DUTY
-            <br> March 2020</span>
+            <br>BLACK OPS6</span>
         </div>
       </div>
     </section>
-    <section id="section2" class="view-sub--2">
-      <div class="section2-wrapper">
-        <h1 class="sub-text">Call of Duty represents the pinnacle of first-person shooter games, combining tactical
-          precision with</h1>
-        <h1 class="sub-text">— immersive gameplay. This globally recognized franchise has consistently set industry
-          standards </h1>
-        <h1 class="sub-text">through its innovative mechanics and realistic combat scenarios. Tailored to meet the
-          expectations</h1>
-        <h1 class="sub-text">of both seasoned players and newcomers. Call of Duty delivers an unmatched experience in
-          terms of strategy and execution.</h1>
+    <section id="section2" class="view-main--2">
+      <div class="section2-wrapper horizontal-scrolling-items">
+        <div class="sub-text horizontal-scrolling-items__item">CALL OF DUTY • BLACK OPS6 • CALL OF DUTY •  BLACK OPS6 • CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •</div>
+        <div class="sub-text horizontal-scrolling-items__item">CALL OF DUTY • BLACK OPS6 • CALL OF DUTY •  BLACK OPS6 • CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •</div>
       </div>
     </section>
+    <div id="section3" class="view-main--3 rounded-3xl">
+      <div class="section3-wrapper">
+        <div class="highlight-sect-title-con">
+
+        </div>
+      </div>
+    </div>
 
 
 
