--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="utils.css">
   <link rel="stylesheet" href="media.css">
 </head>
- 
+
 <body>
   <div id="webbyoly">
     <canvas class="canvas"></canvas>
@@ -119,7 +119,8 @@
     <section id="section1" class="view-main--1 rounded-3xl">
       <div class="section1--wrapper">
         <div class="showreelContainer rounded-2xl text-white video-container">
-          <video class="cod--reel z-10 lazy-video" loop muted src="./assets/identities/main471280trailer3297r.mp4" poster="./assets/img/poster-videoBO6_LP-meta_image.jpg"></video>
+          <video class="cod--reel z-10 lazy-video" loop muted src="./assets/identities/main471280trailer3297r.mp4"
+            poster="./assets/img/poster-videoBO6_LP-meta_image.jpg"></video>
           <span class="reelTip absolute z-20 bottom-0 p-4 font-[Hit-Cond] text-md mix-blend-difference">CALL OF DUTY
             <br>BLACK OPS6</span>
         </div>
@@ -127,20 +128,122 @@
     </section>
     <section id="section2" class="view-main--2">
       <div class="section2-wrapper horizontal-scrolling-items">
-        <div class="sub-text horizontal-scrolling-items__item">CALL OF DUTY • BLACK OPS6 • CALL OF DUTY •  BLACK OPS6 • CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •</div>
-        <div class="sub-text horizontal-scrolling-items__item">CALL OF DUTY • BLACK OPS6 • CALL OF DUTY •  BLACK OPS6 • CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •</div>
+        <div class="sub-text horizontal-scrolling-items__item">CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •
+          CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •</div>
+        <div class="sub-text horizontal-scrolling-items__item">CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •
+          CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •</div>
       </div>
     </section>
     <div id="section3" class="view-main--3 rounded-3xl">
-      <div class="section3-wrapper">
-        <div class="highlight-sect-title-con">
-
+      <div class="section3-wrapper rounded-2xl">
+        <div class="highlight-sect-title-con rounded-xl">
+          <h1>Discover Prologue</h1>
+        </div>
+        <div class="section3-data-wrapper">
+          <div class="logue-container" id="logue-container-1">
+            <div id="card-1" class="card--body">
+              <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="462"
+                height="322" viewBox="0 0 562 422" fill="none">
+                <defs>
+                  <pattern id="image-pattern-1" patternUnits="objectBoundingBox" width="1" height="1">
+                    <image xlink:href="./assets/img/card-banner-1.png" width="562" height="422"
+                      preserveAspectRatio="xMidYMid slice" class="svg-banner-image lazy" />
+                  </pattern>
+                  <clipPath id="clip-shape">
+                    <path
+                      d="M108.775 6.5195L6.48914 109.02C2.65393 112.863 0.5 118.071 0.5 123.5V400.998C0.5 412.32 9.67817 421.498 21 421.498L398.773 421.499C404.21 421.499 409.424 419.339 413.269 415.494L441.553 387.21C445.21 383.553 450.17 381.498 455.342 381.498H541C552.322 381.498 561.5 372.32 561.5 360.998V21C561.5 9.67816 552.322 0.5 541 0.5H123.286C117.842 0.5 112.621 2.66571 108.775 6.5195Z" />
+                  </clipPath>
+                </defs>
+                <rect width="562" height="422" fill="url(#image-pattern-1)" clip-path="url(#clip-shape)" />
+                <path
+                  d="M108.775 6.5195L6.48914 109.02C2.65393 112.863 0.5 118.071 0.5 123.5V400.998C0.5 412.32 9.67817 421.498 21 421.498L398.773 421.499C404.21 421.499 409.424 419.339 413.269 415.494L441.553 387.21C445.21 383.553 450.17 381.498 455.342 381.498H541C552.322 381.498 561.5 372.32 561.5 360.998V21C561.5 9.67816 552.322 0.5 541 0.5H123.286C117.842 0.5 112.621 2.66571 108.775 6.5195Z"
+                  stroke="#f96800" vector-effect="non-scaling-stroke" fill="none" />
+              </svg>
+            </div>
+            <div class="card-1-text w-fit">
+              <span class="t--each-spn">Vault Edition</span>
+              <p class="t--each-para">
+                While the Gulf War commands the global spotlight, a shadowy clandestine force has infiltrated the
+                highest levels of the CIA, branding anyone who resists as traitors. Exiled from their agency and country
+                that once hailed them as heroes, Black Ops veteran Frank Woods and his team find themselves hunted by
+                the military machine that created them.
+              </p>
+              <a href="#"
+                class="cta-btn py-2 px-4 bg-[var(--btn-background)] font-[Hit-Bold] text-[var(--primary-color)]">Learn
+                More</a>
+            </div>
+          </div>
+          <div class="logue-container" id="logue-container-2">
+            <div id="card-1" class="card--body w-fit">
+              <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="462"
+                height="322" viewBox="0 0 562 422" fill="none">
+                <defs>
+                  <pattern id="image-pattern-2" patternUnits="objectBoundingBox" width="1" height="1">
+                    <image xlink:href="./assets/img/card-banner-2.png" width="562" height="422"
+                      preserveAspectRatio="xMidYMid slice" class="svg-banner-image lazy" />
+                  </pattern>
+                  <clipPath id="clip-shape">
+                    <path
+                      d="M108.775 6.5195L6.48914 109.02C2.65393 112.863 0.5 118.071 0.5 123.5V400.998C0.5 412.32 9.67817 421.498 21 421.498L398.773 421.499C404.21 421.499 409.424 419.339 413.269 415.494L441.553 387.21C445.21 383.553 450.17 381.498 455.342 381.498H541C552.322 381.498 561.5 372.32 561.5 360.998V21C561.5 9.67816 552.322 0.5 541 0.5H123.286C117.842 0.5 112.621 2.66571 108.775 6.5195Z" />
+                  </clipPath>
+                </defs>
+                <rect width="562" height="422" fill="url(#image-pattern-2)" clip-path="url(#clip-shape)" />
+                <path
+                  d="M108.775 6.5195L6.48914 109.02C2.65393 112.863 0.5 118.071 0.5 123.5V400.998C0.5 412.32 9.67817 421.498 21 421.498L398.773 421.499C404.21 421.499 409.424 419.339 413.269 415.494L441.553 387.21C445.21 383.553 450.17 381.498 455.342 381.498H541C552.322 381.498 561.5 372.32 561.5 360.998V21C561.5 9.67816 552.322 0.5 541 0.5H123.286C117.842 0.5 112.621 2.66571 108.775 6.5195Z"
+                  stroke="#f96800" vector-effect="non-scaling-stroke" fill="none" />
+              </svg>
+            </div>
+            <div class="card-1-text w-fit">
+              <span class="t--each-spn">Game Modes</span>
+              <p class="t--each-para">
+                Dive into the heart-pounding action of the Black Ops 6 Campaign, where every moment is crafted to keep
+                you on the edge of your seat. The campaign is designed to deliver dynamic, moment-to-moment gameplay
+                that seamlessly blends intense action with cinematic storytelling.Traverse through a variety of
+                meticulously crafted play spaces, each offering unique challenges and
+                experiences.
+              </p>
+              <a href="#"
+                class="cta-btn py-2 px-4 bg-[var(--btn-background)] font-[Hit-Bold] text-[var(--primary-color)]">Learn
+                More</a>
+            </div>
+          </div>
+          <div class="logue-container" id="logue-container-3">
+            <div id="card-1" class="card--body w-fit">
+              <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="462"
+                height="322" viewBox="0 0 562 422" fill="none">
+                <defs>
+                  <pattern id="image-pattern-3" patternUnits="objectBoundingBox" width="1" height="1">
+                    <image xlink:href="./assets/img/card-banner-3.png" width="562" height="422"
+                      preserveAspectRatio="xMidYMid slice" class="svg-banner-image lazy" />
+                  </pattern>
+                  <clipPath id="clip-shape">
+                    <path
+                      d="M108.775 6.5195L6.48914 109.02C2.65393 112.863 0.5 118.071 0.5 123.5V400.998C0.5 412.32 9.67817 421.498 21 421.498L398.773 421.499C404.21 421.499 409.424 419.339 413.269 415.494L441.553 387.21C445.21 383.553 450.17 381.498 455.342 381.498H541C552.322 381.498 561.5 372.32 561.5 360.998V21C561.5 9.67816 552.322 0.5 541 0.5H123.286C117.842 0.5 112.621 2.66571 108.775 6.5195Z" />
+                  </clipPath>
+                </defs>
+                <rect width="562" height="422" fill="url(#image-pattern-3)" clip-path="url(#clip-shape)" />
+                <path
+                  d="M108.775 6.5195L6.48914 109.02C2.65393 112.863 0.5 118.071 0.5 123.5V400.998C0.5 412.32 9.67817 421.498 21 421.498L398.773 421.499C404.21 421.499 409.424 419.339 413.269 415.494L441.553 387.21C445.21 383.553 450.17 381.498 455.342 381.498H541C552.322 381.498 561.5 372.32 561.5 360.998V21C561.5 9.67816 552.322 0.5 541 0.5H123.286C117.842 0.5 112.621 2.66571 108.775 6.5195Z"
+                  stroke="#f96800" vector-effect="non-scaling-stroke" fill="none" />
+              </svg>
+            </div>
+            <div class="card-1-text w-fit">
+              <span class="t--each-spn">Multiplayer</span>
+              <p class="t--each-para">
+                In Black Ops 6 Multiplayer, players will test their skills across 16 new maps at launch, including 12
+                core 6v6 maps and 4 Strike maps that can be played 2v2 or 6v6. Additionally, players will see the return
+                of a more traditional Prestige system, bigger and more rewarding than ever. Post-launch, players can
+                look forward to even more exciting maps and groundbreaking experiences dropping into both Multiplayer
+                and Zombies.
+              </p>
+              <a href="#"
+                class="cta-btn py-2 px-4 bg-[var(--btn-background)] font-[Hit-Bold] text-[var(--primary-color)]">Learn
+                More</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
-
-
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/jsm/loaders/FontLoader.min.js"></script>
