--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     <section id="section1" class="view-main--1 rounded-3xl">
       <div class="section1--wrapper">
         <div class="showreelContainer rounded-2xl text-white video-container">
-          <video class="cod--reel z-10 lazy-video" loop muted src="./assets/identities/main471280trailer3297r.mp4"
-            poster="./assets/img/poster-videoBO6_LP-meta_image.jpg"></video>
+          <video class="cod--reel z-10 lazy" loop muted src="./assets/identities/main471280trailer3297r.mp4"
+            poster="./assets/img/poster-videoBO6_LP-meta_image.webp"></video>
           <span class="reelTip absolute z-20 bottom-0 p-4 font-[Hit-Cond] text-md mix-blend-difference">CALL OF DUTY
             <br>BLACK OPS6</span>
         </div>
@@ -134,7 +134,7 @@
           CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •</div>
       </div>
     </section>
-    <div id="section3" class="view-main--3 rounded-3xl">
+    <section id="section3" class="view-main--3 rounded-3xl">
       <div class="section3-wrapper rounded-2xl">
         <div class="highlight-sect-title-con rounded-xl">
           <h1>Discover Prologue</h1>
@@ -243,7 +243,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/jsm/loaders/FontLoader.min.js"></script>
@@ -255,7 +255,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
     integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lazyload@latest/lazyload.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/17.9.0/lazyload.min.js"></script>
 
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/loaders/SVGLoader.js"></script> -->
   <script src="script.js"></script>
