text & sections are updated

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
     </section>
     <section id="section2" class="view-main--2">
       <div class="section2-wrapper horizontal-scrolling-items">
-        <div class="sub-text horizontal-scrolling-items__item">CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •
+        <div class="horizontal-scrolling-items__item">CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •
           CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •</div>
-        <div class="sub-text horizontal-scrolling-items__item">CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •
+        <div class="horizontal-scrolling-items__item">CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •
           CALL OF DUTY • BLACK OPS6 • CALL OF DUTY • BLACK OPS6 •</div>
       </div>
     </section>
@@ -242,6 +242,20 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section id="section4" class="view-main--3 rounded-3xl">
+      <div class="section4-wrapper">
+<!--         <h1 class="sub-text">Call of Duty: Black Ops 6 is the latest installment in the iconic Black Ops series, renowned for its intense,</h1>
+        <h1 class="sub-text">fast-paced action and gripping storyline. This game takes players deeper into covert operations with</h1>
+        <h1 class="sub-text">cutting-edge weaponry, advanced tactical gameplay, and a narrative filled with twists and turns.</h1>
+        <h1 class="sub-text">The multiplayer mode offers a variety of new maps, modes, and customization options, keeping the</h1>
+        <h1 class="sub-text">competitive spirit alive Whether you're battling through the single-player campaign or diving into the</h1>
+        <h1 class="sub-text">expansive multiplayer arenas, Black Ops 6 promises an immersive experience that stays true to the</h1>
+        <h1 class="sub-text">legacy</h1> -->
+        <h1 class="sub-text">
+          Call of Duty: Black Ops 6 is the latest installment in the iconic Black Ops series, renowned for its intense, fast-paced action and gripping storyline. This game takes players deeper into covert operations with cutting-edge weaponry, advanced tactical gameplay, and a narrative filled with twists and turns. The multiplayer mode offers a variety of new maps, modes, and customization options, keeping the competitive spirit alive. Whether you're battling through the single-player campaign or diving into the expansive multiplayer arenas, Black Ops 6 promises an immersive experience that stays true to the legacy of the franchise while pushing the boundaries of what fans can expect.
+        </h1>
       </div>
     </section>
   </div>
